# mapbox-gl-native

./: CMakeLists.txt  appveyor.yml  circle.yml
benchmark/: CMakeLists.txt
platform/android/: android.cmake
platform/android/MapboxGLAndroidSDK/src/main/java/com/mapbox/mapboxsdk/constants/: MapboxConstants.java
platform/android/MapboxGLAndroidSDK/src/main/java/com/mapbox/mapboxsdk/maps/: MapGestureDetector.java
platform/android/gradle/: dependencies.gradle
platform/android/src/: jni.hpp
platform/darwin/src/: MGLAccountManager.m
platform/default/src/mbgl/storage/: http_file_source.cpp
platform/default/src/mbgl/util/: format_number.cpp
platform/glfw/: CMakeLists.txt
platform/ios/: ios.cmake
platform/ios/app/: MBXViewController.m
platform/ios/ios.xcodeproj/: project.pbxproj
platform/ios/src/: MGLMapView.mm  MGLMapboxEvents.m  MGLScaleBar.mm
platform/macos/: macos.cmake
platform/qt/include/: qmapboxgl.hpp
platform/qt/src/: qmapboxgl.cpp  qmapboxgl_map_renderer.cpp  qmapboxgl_map_renderer.hpp  qmapboxgl_p.hpp
render-test/: CMakeLists.txt
scripts/ci/: Dockerfile
src/mbgl/gl/: context.cpp
src/mbgl/layout/: symbol_layout.cpp
src/mbgl/renderer/layers/: render_symbol_layer.cpp
src/mbgl/text/: placement.cpp
test/: CMakeLists.txt
